--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
+    "react-lazy-load-image-component": "^1.5.6",
+    "react-router-dom": "^6.6.2"
   },
   "jest": {
     "moduleNameMapper": {
@@ -37,6 +42,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^4.3.0",
+    "dotenv-webpack": "^8.0.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^1.2.1",
